# Experimental_project

./: CMakeLists.txt  LEARNING.md  README.md  TROUBLESHOOTING.md
cmake/: toolchain-arm-none-eabi.cmake
include/: datatype.h  my_header.h  nic.h  prototype.h  stm32g4xx_hal_conf.h
src/: CMakeLists.txt  _exit.c  main.c  nic.c  system_stm32g4xx.c
stm32_hal/linker/: STM32G431KB.ld
stm32_hal/startup/: startup_stm32g4xx.S
